--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <marquee direction="right" width="500" height="40">Welcome to Salsabila Laily Rahma's Blog &#128512;</marquee> 
 </div>
 
-<nav class="navbar navbar-light" style="background-color: pink;">
+<nav class="navbar navbar-light" style="background-color: blue;">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -29,10 +29,10 @@
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Resume</a>
+        <a class="nav-link" href="#">Blog</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Linkedin</a>
+        <a class="nav-link" href="#">Social Media</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Discover More</a>
@@ -50,9 +50,9 @@
     <div class="col-sm-4">
       <h2>About Me</h2>
       <h5>Photo of me:</h5>
-      <img src="https://a.wattpad.com/useravatar/Salsabilalaily.256.120025.jpg" class="float-left" alt="@salsabilalaily" width="304"> 
+      <img src="img/0.jpg" class="float-left" alt="@misskecupbung" width="304"> 
       <h2>Contact Me</h3>
-      <h5>For any further informations, you may contact me by click these buttons below.</h5>
+      <h5>Woman, Learner, FLOSS Enthusiast</h5>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="https://www.instagram.com/misskecupbung/">Instagram</a>
@@ -70,11 +70,11 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>PROFILE</h2>
-      <h5>This is my profile description</h5>
-      <div class="fakeimg" style="background-color: pink">I’m a creative and innovative programmer, software engineer fueled by my love of all things about codes. Software engineering technology graduate with recent professional experience. Currently first year in Universitas Gadjah Mada with spesific focus in web developer. Self-motivated, able to work in team,  had a such of experience in organization with great communication and responsibility. During my free time, I join a lot of positive activities in organizations that can improve my social skills to learn how to manage time and work. I very much enjoy collaborating with a team of people with similiar interests and working towards shared goals. I am also learning English (British and USA) language toward A-level next year.</div>
+      <h2>Profile</h2>
+      <h5>Tentang saya!</h5>
+      <div class="fakeimg" style="background-color: blue">Hallo! Nama saya Ananda. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</div>
       <br>
-      <h2>EDUCATION</h2>
+      <h2>Pendidikan</h2>
       <h5>This is my educational background</h5>
       <div class="fakeimg" style="background-color: pink">
         <br>
@@ -90,9 +90,10 @@
   <section id="vm">
     <div>
       <div class=visi-misi1>
-        <p>1. Programming</p>
-        <p>2. Web Developer</p>
-        <p>3. Database</p>
+        <p>1. Cloud IaaS</p>
+        <p>2. Linux Engineer</p>
+        <p>3. Network Administration</p>
+        <p>4. Programming Language</p>
       </div>
       <div class=box-visi>
         <img src="img/skill.jpg" width=200 style="margin: 100px;">
@@ -100,9 +101,9 @@
     </div>
     <div >
       <div class=visi-misi2 style="border: 10px double pink;">
-        <p>1. Technology</p>
-        <p>2. Bussiness</p>
-        <p>3. Education</p>
+        <p>1. Education</p>
+        <p>2. Technology</p>
+        <p>3. Bussines</p>
       </div>
       <div class=box-misi style="border: 10px solid pink;">
         <img src="img/interest.png" width=300 style="margin: 50px;">
@@ -134,7 +135,7 @@
     }
   </script>
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">Click me to display Date and Time.</button>
+  <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">Display Date and Time.</button>
   <p id="demo"></p>
   <p>Made with &#128151; in Yogyakarta</p>
 </div>
