--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>Hello!</h1>
   <br>
-  <marquee direction="right" width="500" height="40">Welcome to Salsabila Laily Rahma's Blog &#128512;</marquee> 
+  <marquee direction="right" width="500" height="40">Jurnal Misskecupbung &#128512;</marquee> 
 </div>
 
-<nav class="navbar navbar-light" style="background-color: blue;">
+<nav class="navbar navbar-light" style="background-color: #f3c623;">
   <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
@@ -50,7 +50,7 @@
     <div class="col-sm-4">
       <h2>About Me</h2>
       <h5>Photo of me:</h5>
-      <img src="img/0.jpg" class="float-left" alt="@misskecupbung" width="304"> 
+      <img src="img/me.jpg" class="float-left" alt="@misskecupbung" width="304"> 
       <h2>Contact Me</h3>
       <h5>Woman, Learner, FLOSS Enthusiast</h5>
       <ul class="nav nav-pills flex-column">
@@ -72,11 +72,11 @@
     <div class="col-sm-8">
       <h2>Profile</h2>
       <h5>Tentang saya!</h5>
-      <div class="fakeimg" style="background-color: blue">Hallo! Nama saya Ananda. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</div>
+      <div class="fakeimg" style="background-color: #f3c623">Hallo! Nama saya Ananda. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</div>
       <br>
       <h2>Pendidikan</h2>
       <h5>This is my educational background</h5>
-      <div class="fakeimg" style="background-color: pink">
+      <div class="fakeimg" style="background-color: #f3c623">
         <br>
         <p>1. Universitas Gadjah Mada (2019-2023)</p>
         <p>2. SMK Sakti Gemolong(2016-2019)</p>
@@ -100,12 +100,12 @@
       </div>
     </div>
     <div >
-      <div class=visi-misi2 style="border: 10px double pink;">
+      <div class=visi-misi2 style="border: 10px double #844685;">
         <p>1. Education</p>
         <p>2. Technology</p>
         <p>3. Bussines</p>
       </div>
-      <div class=box-misi style="border: 10px solid pink;">
+      <div class=box-misi style="border: 10px solid #844685;">
         <img src="img/interest.png" width=300 style="margin: 50px;">
       </div>
     </div>
