--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Ananda Dwi Rahmawati</title>
+  <title>Jurnal Misskecupbung</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -16,13 +16,13 @@
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>Hello!</h1>
+  <h1>Jurnal Misskecupbung</h1>
   <br>
-  <marquee direction="right" width="500" height="40">Jurnal Misskecupbung &#128512;</marquee> 
+  <marquee direction="left" width="500" height="40">Selamat Datang #128512;</marquee> 
 </div>
 
-<nav class="navbar navbar-light" style="background-color: #f3c623;">
-  <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-light" style="background-color: #d4ebd0;">
+  <a class="navbar-brand" href="#">NavBar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -34,6 +34,8 @@
       <li class="nav-item">
         <a class="nav-link" href="#">Social Media</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About Me</a>
       <li class="nav-item">
         <a class="nav-link" href="#">Discover More</a>
       </li>
@@ -70,19 +72,19 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>Profile</h2>
+      <div class="fakeimg" style="background-color: #f3c623"><h2>Profile</h2></div>
       <h5>Tentang saya!</h5>
-      <div class="fakeimg" style="background-color: #f3c623">Hallo! Nama saya Ananda. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</div>
+      <p>Hallo! Nama saya Ananda. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</p>
       <br>
-      <h2>Pendidikan</h2>
-      <h5>This is my educational background</h5>
       <div class="fakeimg" style="background-color: #f3c623">
+      <h2>Pendidikan</h2>
+      </div>
+      <h5>This is my educational background</h5>
         <br>
         <p>1. Universitas Gadjah Mada (2019-2023)</p>
         <p>2. SMK Sakti Gemolong(2016-2019)</p>
         <p>3. SMPN 2 Gemolong (2013-2016)</p>
         <p>4. SDN 1 Kragilan (2007-2013)</p>
-      </div>
     </div>
   </div>
 </div>
@@ -96,7 +98,7 @@
         <p>4. Programming Language</p>
       </div>
       <div class=box-visi>
-        <img src="img/skill.jpg" width=200 style="margin: 100px;">
+        <img src="img/c.jpg" width=200 style="margin: 100px;">
       </div>
     </div>
     <div >
@@ -106,7 +108,7 @@
         <p>3. Bussines</p>
       </div>
       <div class=box-misi style="border: 10px solid #844685;">
-        <img src="img/interest.png" width=300 style="margin: 50px;">
+        <img src="img/d.png" width=300 style="margin: 50px;">
       </div>
     </div>
   </section>
