--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>Jurnal Misskecupbung</h1>
   <br>
-  <marquee direction="left" width="500" height="40">Selamat Datang #128512;</marquee> 
+  <marquee direction="left" width="500" height="40">Selamat Datang;</marquee> 
 </div>
 
 <nav class="navbar navbar-light" style="background-color: #d4ebd0;">
@@ -98,7 +98,7 @@
         <p>4. Programming Language</p>
       </div>
       <div class=box-visi>
-        <img src="img/c.jpg" width=200 style="margin: 100px;">
+        <img src="img/c.png" width=200 style="margin: 100px;">
       </div>
     </div>
     <div >
@@ -108,7 +108,7 @@
         <p>3. Bussines</p>
       </div>
       <div class=box-misi style="border: 10px solid #844685;">
-        <img src="img/d.png" width=300 style="margin: 50px;">
+        <img src="img/d.jpg" width=300 style="margin: 50px;">
       </div>
     </div>
   </section>
