--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <a class="nav-link" href="https://www.linkedin.com/in/anandadwir/">Linkedin</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">&#x1F4DE; 085669829150</a>
+          <a class="nav-link disabled" href="#">&#x1F4DE; +62 8132 6789 108</a>
         </li>
       </ul>
       <hr class="d-sm-none">
@@ -74,7 +74,7 @@
     <div class="col-sm-8">
       <div class="fakeimg" style="background-color: #f3c623"><h2>Profile</h2></div>
       <h5>Tentang saya!</h5>
-      <p>Hallo! Nama saya Ananda. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</p>
+      <p>Hallo! Nama saya Ananda. Saya lahir pada tanggal 23 Mei 2001 di Sragen Jawa Tengah. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</p>
       <br>
       <div class="fakeimg" style="background-color: #f3c623">
       <h2>Pendidikan</h2>
@@ -82,10 +82,64 @@
       <h5>This is my educational background</h5>
         <br>
         <p>1. Universitas Gadjah Mada (2019-2023)</p>
-        <p>2. SMK Sakti Gemolong(2016-2019)</p>
-        <p>3. SMPN 2 Gemolong (2013-2016)</p>
-        <p>4. SDN 1 Kragilan (2007-2013)</p>
-    </div>
+      </div>
+      <h2>Pendidikan</h2>
+      </div>
+      <h5>This is my educational background</h5>
+        <br>
+        <p>1. Certified OpenStack Administrator, COA (2019)</p>
+        <p>2. LSP TIK (Junior Networking) 2019</p>
+        <p>3. MikroTik Certified Network Associate, MTCNA (2020)</p>
+        <p>4. MikroTik Certified Routing Engineer, MTCRE (2020)</p>
+        <p>5. MikroTik Certified Wireless Engineer, MTCWE (2020)</p>
+        <p>6. Mikrotik Certified Security Engineer, MTCSE (2020)</p>
+        <p>7. MikroTik Certified Traffic Control Engineer, MTCTCE (2020)</p>
+        <p>8. MikroTik Certified User Management Engineer, MTCUME (2020)</p>
+        <p>9. MikroTik Certified Inter Network Engineer, MTCINE (2020)</p>
+      </div>
+       </div>
+      <h2>Experiences</h2>
+      </div>
+      <h5>This is my educational background</h5>
+        <br>
+        <p>1. Public Speaker Mum Mikrotik Yogyakarta, 2017</p>
+        <p>2. Public Speaker Mum Mikrotik Yogyakarta, 2018</p>
+        <p>3. Public Speaker Libreoffice Conference Surabaya 2018</p>
+        <p>4. Public Speaker GNOME Asia Summit Gresik 2019</p>
+        <p>5. Public Speaker DevFest GDG Bandung 2019</p>
+        <p>6. Public Speaker Open Infrastructure Day Surabaya 2019</p>
+      </div>
+      <h2>Summary of Skills</h2>
+      </div>
+      <h5>This is summary of my skills</h5>
+        <br>
+        <p>1. Hardware/Appliances: Server, Storage, Network</p>
+        <p>2. Enterprise GNU/Linux (RHEL, Ubuntu) Services: DHCP, DNS, Proxy, Web, Mail, File/Storage, Backup & Restore, etc.</p>
+        <p>3. Windows Administration: ADDS, ADCS, DFS, File Services, Manage Storage, etc.</p>
+        <p>4. Network : Mikrotik, Cisco and Juniper</p>
+        <p>5. Virtualization: Proxmox, VMware Esxi, KVM</p>
+        <p>6. Application Containers : Docker Container</p>
+        <p>7. Version Control: Git</p>
+        <p>8. Container Orchestrator : Kubernetes, Swarm, Helm</p>
+        <p>9. Application Automation : Ansible, Terraform</p>
+        <p>10. Cloud: OpenStack, Microsoft Azure, OpenShift</p>
+        <p>11. Storage Cluster: Ceph, Glusterfs</p>
+        <p>12. Logging and Monitoring: Fluentd, Prometheus, Grafana, Elastic Search</p>
+        <p>13. Programming: Python, Java, Bash</p>
+        <p>14. DBMS: MariaDB, MySQL, Postgresql</p>
+        <p>15. Web Framework: Django</p>
+        <p>16. CI/CD: Jenkins, Gitlab</p>
+        <p>17. Service Proxy, Discovery, and Mesh: Envoy, Linkerd, Istio</p>
+      </div>
+      </div>
+      <h2>Organization Record</h2>
+      </div>
+      <h5>This is my educational background</h5>
+        <br>
+        <p>1. BlankOn Linux Indonesia, 2017-Present</p>
+        <p>2. Sakti Goes Open Source, 2017-Present</p>
+        <p>3. Paguyuban Linux Solo</p>
+      </div>
   </div>
 </div>
   <!--tambahan-->
