--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="jumbotron text-center" style="margin-bottom:0">
   <h1>Jurnal Misskecupbung</h1>
   <br>
-  <marquee direction="left" width="500" height="40">Selamat Datang;</marquee> 
+  <marquee direction="left" width="500" height="40">Selamat Datang!!!</marquee> 
 </div>
 
 <nav class="navbar navbar-light" style="background-color: #d4ebd0;">
