--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       <h5>This is my educational background</h5>
         <br>
         <p>1. Universitas Gadjah Mada (2019-2023)</p>
+      <div class="fakeimg" style="background-color: #f3c623">
+      <h2>Certificate of Competence</h2>
       </div>
-      <h2>Pendidikan</h2>
-      </div>
-      <h5>This is my educational background</h5>
+      <h5>This is my certificate of skill competence</h5>
         <br>
         <p>1. Certified OpenStack Administrator, COA (2019)</p>
         <p>2. LSP TIK (Junior Networking) 2019</p>
@@ -98,6 +98,7 @@
         <p>9. MikroTik Certified Inter Network Engineer, MTCINE (2020)</p>
       </div>
        </div>
+      <div class="fakeimg" style="background-color: #f3c623">
       <h2>Experiences</h2>
       </div>
       <h5>This is my educational background</h5>
@@ -109,6 +110,7 @@
         <p>5. Public Speaker DevFest GDG Bandung 2019</p>
         <p>6. Public Speaker Open Infrastructure Day Surabaya 2019</p>
       </div>
+      <div class="fakeimg" style="background-color: #f3c623">
       <h2>Summary of Skills</h2>
       </div>
       <h5>This is summary of my skills</h5>
@@ -131,7 +133,7 @@
         <p>16. CI/CD: Jenkins, Gitlab</p>
         <p>17. Service Proxy, Discovery, and Mesh: Envoy, Linkerd, Istio</p>
       </div>
-      </div>
+      <div class="fakeimg" style="background-color: #f3c623">
       <h2>Organization Record</h2>
       </div>
       <h5>This is my educational background</h5>
