--- a/index.html
+++ b/index.html
@@ -75,13 +75,11 @@
       <div class="fakeimg" style="background-color: #f3c623"><h2>Profile</h2></div>
       <h5>Tentang saya!</h5>
       <p>Hallo! Nama saya Ananda. Saya lahir pada tanggal 23 Mei 2001 di Sragen Jawa Tengah. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</p>
-      <br>
-      <div class="fakeimg" style="background-color: #f3c623">
+      <br> <div class="fakeimg" style="background-color: #f3c623">
       <h2>Pendidikan</h2>
       </div>
       <h5>This is my educational background</h5>
-        <br>
-        <p>1. Universitas Gadjah Mada (2019-2023)</p>
+      <br><p>1. Universitas Gadjah Mada (2019-2023)</p>
       <div class="fakeimg" style="background-color: #f3c623">
       <h2>Certificate of Competence</h2>
       </div>
@@ -96,7 +94,6 @@
         <p>7. MikroTik Certified Traffic Control Engineer, MTCTCE (2020)</p>
         <p>8. MikroTik Certified User Management Engineer, MTCUME (2020)</p>
         <p>9. MikroTik Certified Inter Network Engineer, MTCINE (2020)</p>
-      </div>
        </div>
       <div class="fakeimg" style="background-color: #f3c623">
       <h2>Experiences</h2>
@@ -142,7 +139,6 @@
         <p>2. Sakti Goes Open Source, 2017-Present</p>
         <p>3. Paguyuban Linux Solo</p>
       </div>
-  </div>
 </div>
   <!--tambahan-->
   <section id="vm">
