--- a/index.html
+++ b/index.html
@@ -75,14 +75,11 @@
       <div class="fakeimg" style="background-color: #f3c623"><h2>Profile</h2></div>
       <h5>Tentang saya!</h5>
       <p>Hallo! Nama saya Ananda. Saya lahir pada tanggal 23 Mei 2001 di Sragen Jawa Tengah. Saya seorang mahasiswa di Universitas Gadjah Mada Prodi D4 Teknologi Rekayasa Perangkat Lunak. Salam kenal!</p>
-      <br> <div class="fakeimg" style="background-color: #f3c623">
-      <h2>Pendidikan</h2>
-      </div>
+      <br> <div class="fakeimg" style="background-color: #f3c623"><h2>Pendidikan</h2></div>
       <h5>This is my educational background</h5>
-      <br><p>1. Universitas Gadjah Mada (2019-2023)</p>
-      <div class="fakeimg" style="background-color: #f3c623">
-      <h2>Certificate of Competence</h2>
-      </div>
+      <br>
+      <p>1. Universitas Gadjah Mada (2019-2023)</p>
+      <div class="fakeimg" style="background-color: #f3c623"><h2>Certificate of Competence</h2></div>
       <h5>This is my certificate of skill competence</h5>
         <br>
         <p>1. Certified OpenStack Administrator, COA (2019)</p>
@@ -94,10 +91,7 @@
         <p>7. MikroTik Certified Traffic Control Engineer, MTCTCE (2020)</p>
         <p>8. MikroTik Certified User Management Engineer, MTCUME (2020)</p>
         <p>9. MikroTik Certified Inter Network Engineer, MTCINE (2020)</p>
-       </div>
-      <div class="fakeimg" style="background-color: #f3c623">
-      <h2>Experiences</h2>
-      </div>
+      <div class="fakeimg" style="background-color: #f3c623"><h2>Experiences</h2></div>
       <h5>This is my educational background</h5>
         <br>
         <p>1. Public Speaker Mum Mikrotik Yogyakarta, 2017</p>
@@ -106,10 +100,7 @@
         <p>4. Public Speaker GNOME Asia Summit Gresik 2019</p>
         <p>5. Public Speaker DevFest GDG Bandung 2019</p>
         <p>6. Public Speaker Open Infrastructure Day Surabaya 2019</p>
-      </div>
-      <div class="fakeimg" style="background-color: #f3c623">
-      <h2>Summary of Skills</h2>
-      </div>
+      <div class="fakeimg" style="background-color: #f3c623"><h2>Summary of Skills</h2></div>
       <h5>This is summary of my skills</h5>
         <br>
         <p>1. Hardware/Appliances: Server, Storage, Network</p>
@@ -129,16 +120,12 @@
         <p>15. Web Framework: Django</p>
         <p>16. CI/CD: Jenkins, Gitlab</p>
         <p>17. Service Proxy, Discovery, and Mesh: Envoy, Linkerd, Istio</p>
-      </div>
-      <div class="fakeimg" style="background-color: #f3c623">
-      <h2>Organization Record</h2>
-      </div>
+      <div class="fakeimg" style="background-color: #f3c623"><h2>Organization Record</h2></div>
       <h5>This is my educational background</h5>
         <br>
         <p>1. BlankOn Linux Indonesia, 2017-Present</p>
         <p>2. Sakti Goes Open Source, 2017-Present</p>
         <p>3. Paguyuban Linux Solo</p>
-      </div>
 </div>
   <!--tambahan-->
   <section id="vm">
