--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
   <div class="row">
     <div class="col-sm-4">
       <h2>About Me</h2>
-      <h5>Photo of me:</h5>
       <img src="img/me.jpg" class="float-left" alt="@misskecupbung" width="304"> 
       <h2>Contact Me</h3>
       <h5>Woman, Learner, FLOSS Enthusiast</h5>
       <ul class="nav nav-pills flex-column">
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/anandadwir/">Linkedin</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link active" href="https://www.instagram.com/misskecupbung/">Instagram</a>
         </li>
@@ -63,7 +65,7 @@
           <a class="nav-link" href="https://web.facebook.com/misskecupbung">Facebook</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="https://www.linkedin.com/in/anandadwir/">Linkedin</a>
+          <a class="nav-link" href="https://misskecupbung.wordpress.com/">Jurnal Misskecupbung</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#">&#x1F4DE; +62 8132 6789 108</a>
