--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
         <p>1. BlankOn Linux Indonesia, 2017-Present</p>
         <p>2. Sakti Goes Open Source, 2017-Present</p>
         <p>3. Paguyuban Linux Solo</p>
-</div>
-  <!--tambahan-->
+      </div>
+    </div>
+  </div>
+</div>  <!--tambahan-->
   <section id="vm">
     <div>
       <div class=visi-misi1>
