--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<div class="jumbotron text-center" style="margin-bottom:0">
+<div class="jumbotron text-center" style="margin-bottom:0" style="background-image: url('img/0.png');">
   <h1>Jurnal Misskecupbung</h1>
   <br>
   <marquee direction="left" width="500" height="40">Selamat Datang!!!</marquee> 
