--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <p>4. Programming Language</p>
       </div>
       <div class=box-visi>
-        <img src="img/c.png" width=200 style="margin: 100px;">
+        <img src="img/c.jpg" width=200 style="margin: 100px;">
       </div>
     </div>
     <div >
