--- a/index.html
+++ b/index.html
@@ -136,9 +136,8 @@
     <div>
       <div class=visi-misi1>
         <p>1. Cloud IaaS</p>
-        <p>2. Linux Engineer</p>
-        <p>3. Network Administration</p>
-        <p>4. Programming Language</p>
+        <p>2. Linux and Network </p>
+        <p>3. Programming Language</p>
       </div>
       <div class=box-visi>
         <img src="img/c.jpg" width=200 style="margin: 100px;">
