--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <div class="jumbotron text-center" style="margin-bottom:0">
   <button type="button" onclick="document.getElementById('demo').innerHTML = Date()">Display Date and Time.</button>
   <p id="demo"></p>
-  <p>Made with &#128151; in Yogyakarta</p>
+  <p>We &#128151; Indonesia</p>
 </div>
 
 </body>
